fixed validation bug that was getting the form to be stuck in pending in register and create product page, also changed css rules for product list to be more visualy apealing

--- a/src/app/components/product-list/product-list.component.css
+++ b/src/app/components/product-list/product-list.component.css
@@ -8,7 +8,7 @@
 .ProductCard {
   justify-content: center;
   text-align: center;
-  height: 20em;
+  height: auto;
   width: 20em;
   box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.3);
   background-color: rgb(255, 255, 255);
